-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.7.1
-
None
Open e.g. examples\quick\controls\stackview\main.qml , and go to Design mode. Then add 'New state' button.
An error occurs that 'states' is an invalid property (see other bug report). However, when then trying again to show the file in Designer it just prints
'Error: Could not load: createComponent.qml:5 module "QtQuick" version 1.0 is not installed".
Checking the source file, there's now indeed an
'import QtQuick 1.0'
right below the other imports, although the list of imports already contains a 'import QtQuick 2.1'
For Gerrit Dashboard: QTCREATORBUG-9298 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
56528,1 | QmlDesigner: Check for QtQuick 2.1 in states editor | 2.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |