QmlDesigner: Check for QtQuick 2.1 in states editor

Task-number: QTCREATORBUG-9298
Change-Id: I8660e7d9614e77d23e1ef6515904941505f410dd
Reviewed-by: Thomas Hartmann <Thomas.Hartmann@digia.com>
Reviewed-by: Marco Bubke <marco.bubke@digia.com>